--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -16,6 +16,49 @@
 
 }
 
+%%%%%%%%%%%%%%%%monojet
+
+@article{Haisch:2015ioa,
+      author         = "Haisch, Ulrich and Re, Emanuele",
+      title          = "{Simplified dark matter top-quark interactions at the
+                        LHC}",
+      year           = "2015",
+      eprint         = "1503.00691",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "OUTP-15-02P, CERN-PH-TH-2014-253",
+      SLACcitation   = "%%CITATION = ARXIV:1503.00691;%%",
+}
+
+@article{Haisch:2013ata,
+      author         = "Haisch, Ulrich and Kahlhoefer, Felix and Re, Emanuele",
+      title          = "{QCD effects in mono-jet searches for dark matter}",
+      journal        = "JHEP",
+      volume         = "1312",
+      pages          = "007",
+      doi            = "10.1007/JHEP12(2013)007",
+      year           = "2013",
+      eprint         = "1310.4491",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "OUTP-13-20P, NSF-KITP-13-241",
+      SLACcitation   = "%%CITATION = ARXIV:1310.4491;%%",
+}
+
+@techreport{ATL-PHYS-PUB-2014-007,
+      title         = "{Sensitivity to WIMP Dark Matter in the Final States
+                       Containing Jets and Missing Transverse Momentum with the
+                       ATLAS Detector at 14 TeV LHC}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-PHYS-PUB-2014-007",
+      month         = "Jun",
+      year          = "2014",
+      reportNumber  = "ATL-PHYS-PUB-2014-007",
+      url           = "https://cds.cern.ch/record/1708859",
+}
+
+
 %%%%%%%%%%%%%%%%EFT references 
 
 @article{Goodman:2010ku,
