updates in the monojet section
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@63 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -94,13 +94,13 @@ The simplified models described here have four free parameters: mediator mass $\
 
 Figure\,\ref{fig:monojet_scan_V_g} reveals there are no differences in the shape of the $\MET$ distribution among the samples where the pair of 10\,GeV Dark Matter particles are produced on-shell from the mediator of 1\,TeV, generated with different choice of the coupling strength. The considered coupling values range from 0.1 to 1.45, where the latter value approximates the maximum allowed coupling value, holding $g_q=\gDM$, such that $\Gamma_{\rm{min}} < \mMed$.
 Based on similar plots for different choices of mediator and Dark Matter masses, it is concluded that the shapes of kinematic distributions are not altered neither for the on-shell Dark Matter production where $\mMed>2\mDM$, nor for the off-shell Dark Matter production where $\mMed<2\mDM$. Only the cross sections change.
-%TODO comment on the transition region (mixture of on-shell and off-shell kinematics)
+Differences in kinematic distributions are expected only close to the transition region where both on-shell and off-shell regimes mix.
 %TODO clarify slide 9 and 10 in https://indico.cern.ch/event/389275/contribution/1/material/slides/0.pdf
-%TODO check explicitely for V and A (generate corresponding samples)
+%TODO check explicitly for V and A (generate corresponding samples)
 \begin{figure}
 \centering
 \includegraphics[width=0.9\linewidth]{figures/monojet/scan_g_V_10_1000.eps}
-\caption{Scan over couplings}
+\caption{Scan over couplings. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$\,GeV and $\MET>500$\,GeV cut, respectively.}
 \label{fig:monojet_scan_V_g}
 \end{figure}
 
@@ -119,7 +119,7 @@ In general, for such extreme parameter choices as $\mMed=7$\,TeV and $\Gamma_{\r
 \begin{figure}
 \centering
 \includegraphics[width=0.9\linewidth]{figures/monojet/scan_g_V_10_5000.eps}
-\caption{Scan over couplings}
+\caption{Scan over couplings. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$\,GeV and $\MET>500$\,GeV cut, respectively.}
 \label{fig:monojet_narrow}
 \end{figure}
 
@@ -136,14 +136,14 @@ For the fixed mediator mass and couplings, both the cross section and the kinema
 \begin{figure}
 \centering
 \includegraphics[width=0.9\linewidth]{figures/monojet/scan_mDM_V_1000.eps}
-\caption{Scan over Dark Matter mass}
+\caption{Scan over Dark Matter mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$\,GeV and $\MET>500$\,GeV cut, respectively.}
 \label{fig:monojet_scan_V_mDM1000}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=0.9\linewidth]{figures/monojet/scan_mDM_V_100.eps}
-\caption{Scan over Dark Matter mass}
+\caption{Scan over Dark Matter mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$\,GeV and $\MET>500$\,GeV cut, respectively.}
 \label{fig:monojet_scan_V_mDM100}
 \end{figure}
 
@@ -156,14 +156,14 @@ On the other hand, the $\MET$ shapes are similar in the off-shell Dark Matter pr
 \begin{figure}
 \centering
 \includegraphics[width=0.9\linewidth]{figures/monojet/scan_mMed_V_10.eps}
-\caption{Scan over mediator mass}
+\caption{Scan over mediator mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$\,GeV and $\MET>500$\,GeV cut, respectively.}
 \label{fig:monojet_scan_V_mMed10}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=0.9\linewidth]{figures/monojet/scan_mMed_V_1000.eps}
-\caption{Scan over mediator mass}
+\caption{Scan over mediator mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$\,GeV and $\MET>500$\,GeV cut, respectively.}
 \label{fig:monojet_scan_V_mMed1000}
 \end{figure}
 
@@ -206,6 +206,8 @@ The presentation of the results in the $g_q$--$\gDM$ plane for fixed masses bene
 
 
 \subsection{Scalar and pseudoscalar mediator, s-channel exchange}
+
+%TODO add figure with diagrams
 
 The matrix element implementation of the s-channel spin-0 mediated DM production is available in POWHEG with the full top-loop calculation at LO\,\cite{Haisch:2015ioa}.
 The model assumes Dirac Dark Matter particles and is based on the minimal flavor violation (MFV), which motivates Higgs-like Yukawa couplings of the mediator to the Standard Model quarks. No other couplings, such as to leptons, are allowed in this model.
@@ -250,35 +252,35 @@ No differences in the kinematic distributions are observed and also the cross se
 \begin{figure}
 \centering
 \includegraphics[width=0.9\linewidth]{figures/monojet/scan_g_S_10_500.eps}
-\caption{Scan over couplings}
+\caption{Scan over couplings. The $\MET$ distribution is compared for the scalar mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$\,GeV and $\MET>500$\,GeV cut, respectively.}
 \label{fig:monojet_scan_S_g}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=0.9\linewidth]{figures/monojet/scan_mDM_S_500.eps}
-\caption{Scan over Dark Matter mass}
+\caption{Scan over Dark Matter mass. The $\MET$ distribution is compared for the scalar mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$\,GeV and $\MET>500$\,GeV cut, respectively.}
 \label{fig:monojet_scan_S_mDM1000}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=0.9\linewidth]{figures/monojet/scan_mDM_S_100.eps}
-\caption{Scan over Dark Matter mass}
+\caption{Scan over Dark Matter mass. The $\MET$ distribution is compared for the scalar mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$\,GeV and $\MET>500$\,GeV cut, respectively.}
 \label{fig:monojet_scan_S_mDM100}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=0.9\linewidth]{figures/monojet/scan_mMed_S_10.eps}
-\caption{Scan over mediator mass}
+\caption{Scan over mediator mass. The $\MET$ distribution is compared for the scalar mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$\,GeV and $\MET>500$\,GeV cut, respectively.}
 \label{fig:monojet_scan_S_mMed10}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=0.9\linewidth]{figures/monojet/scan_mMed_S_1000.eps}
-\caption{Scan over mediator mass}
+\caption{Scan over mediator mass. The $\MET$ distribution is compared for the scalar mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$\,GeV and $\MET>500$\,GeV cut, respectively.}
 \label{fig:monojet_scan_S_mMed1000}
 \end{figure}
 
@@ -332,7 +334,7 @@ In the case of the off-shell production and the EFT limit, the first term in the
 \end{equation}
 The on-shell production regime is the most interesting one as it gives the best chances for a discovery at the LHC given the cross section enhancement. The propagator term with the width cannot be neglected in this case and, in the narrow width approximation, one can integrate
 \begin{equation}
-\int \frac{ds}{(s-\mMed^2)^2 + \mMed^2\Gamma^2)} = \frac{\pi}{\mMed\Gamma}
+\int \frac{ds}{(s-\mMed^2)^2 + \mMed^2\Gamma^2} = \frac{\pi}{\mMed\Gamma}
 \end{equation}
 which further implies the cross section scaling
 \begin{equation}
@@ -400,9 +402,9 @@ Constant colors indicate the lines along which the cross section scaling works p
 \includegraphics[width=0.45\linewidth]{figures/monojet/scaling_S_10_100.eps}
 \includegraphics[width=0.45\linewidth]{figures/monojet/scaling_S_10_1000.eps}\\
 \caption{Ratio of the rescaled and generated cross sections in the $g_q$--$\gDM$ plane. The point at $g_q=\gDM=1$, taken as a reference for the rescaling, is denoted by a star symbol.
-Scalar model with $\mMed=100$\,GeV (left) and 1\,TeV (right) is plotted for $\mDM=10$\,GeV.}
+Scalar model with $\mMed=100$\,GeV (left) and 1\,TeV (right) is plotted for $\mDM=10$\,GeV.
+The limiting case $\Gamma_{\rm{min}}=\mMed$ is shown as a black line.}
 %Vector (scalar) mediator is shown at the top (bottom), the left (right) column corresponds to $\mMed=100$\,GeV ($\mMed=1$\,TeV). Dark Matter mass of 10\,GeV is considered.}
-%TODO indicate mMed=GammaMin in the plot
 \label{fig:monojet_scaling}
 \end{figure}
 
@@ -412,7 +414,8 @@ Scalar model with $\mMed=100$\,GeV (left) and 1\,TeV (right) is plotted for $\mD
 \includegraphics[page=1, trim=310 200 310 200, clip, width=0.3\linewidth]{figures/monojet/rescalingexercise.pdf}
 \includegraphics[page=2, trim=305 195 305 195, clip, width=0.3\linewidth]{figures/monojet/rescalingexercise.pdf}
 \includegraphics[page=3, trim=300 190 300 190, clip, width=0.3\linewidth]{figures/monojet/rescalingexercise.pdf}
-\caption{Scaling along the lines of constnat width}
+\caption{Scaling along the lines of constnat width. The line of constant width for $\mMed=300$\,GeV and $\mDM=100$\,GeV, intercepting $g_q=\gDM=4$ is shown on left. The generated and rescaled cross sections are compared in the middle, the corresponding ratio is shown on right.}
+%TODO ask Uli for the color code
 \label{fig:monojet_scaling_constwidth}
 \end{figure}
 
@@ -433,23 +436,38 @@ We propose to present the results in the $g_q$--$\gDM$ plane using the following
 
 \paragraph{Rescaling to different mediator width}
 
-In general there may be an interest to consider larger mediator masses than $\Gamma_{\rm{min}}$ in order to accommodate further couplings of the mediator. The cross section scaling method described above can be used to reinterpret the results presented for the minimal width.
+In general there may be an interest to consider larger mediator masses than $\Gamma_{\rm{min}}$ in order to accommodate further couplings of the mediator. The cross section scaling method described above can be used to reinterpret the results presented for the minimal width, since multiplying the width by factor $n$ is equivalent to changing the coupling strength by factor $\sqrt{n}$, i.e.
+\begin{equation}
+\sigma(g_q,\gDM, n\Gamma_{\rm{min}}(g_q,\gDM)) \propto \frac{g_q^2 \gDM^2}{\Gamma_{\rm{min}}(\sqrt{n}g_q,\sqrt{n}\gDM)} \;.
+\end{equation}
+The cross section for the sample with couplings $g_q$ and $\gDM$ and modified mediator width $\Gamma = n\Gamma_{\rm{min}}$ can therefore be rescaled from a sample generated with the minimal width corresponding to the couplings scaled by $\sqrt{n}$ as described in the following formula.
+\begin{equation}
+\sigma(g_q,\gDM, n\Gamma_{\rm{min}}(g_q,\gDM)) = \frac{1}{n^2} \sigma(\sqrt{n}g_q,\sqrt{n}\gDM,\Gamma_{\rm{min}}(\sqrt{n}g_q,\sqrt{n}\gDM))
+\end{equation}
+Advantage of doing this is again in the fact that no event selection and detector response needs to be simulated since the changes in couplings do not have an effect on the shapes of kinematic distributions.
 
 
 
-\subsection{Powheg}
 
+\subsection{POWHEG settings}
+
+The POWHEG implementation allows to generate a single sample that provides sufficient statistics in all mono-jet analysis signal regions by optimizing the following two parameters:
 \begin{itemize}
-\item bornktmin and bornsuppfact to ensure sufficient statistics at high MET
+\item POWHEG generates weighted events and the \verb+bornsuppfact+ parameter is used to set the event suppression factor according to
+\begin{equation}
+F(k_{\rm{T}})=\frac{k_{\rm{T}}^2}{k_{\rm{T}}^2+\texttt{bornsuppfact}^2} \;.
+\end{equation}
+In this way, the events at low $\MET$ are suppressed and receive higher event weights which ensures higher statistics at high $\MET$. We recommend to set \verb+bornsuppfact+ to 1000.
+\item The \verb+bornktmin+ parameter allows to suppress the low $\MET$ region even further by starting the generation at a certain value of $k_{\rm{T}}$. It is recommended to set this parameter  to half the lower analysis $\MET$ cut, therefore the proposed value for \verb+bornktmin+ is 150.
 \end{itemize}
 
 
 %\subsection{MadGraph}
 %
 %\begin{itemize}
-%\item jet differential rates for CKKW for 30 GeV and 80 GeV (ask Fuquan for final plots)
+%\item jet differential rates for CKKW for 30 GeV and 80 GeV
 %\item importance of 0-parton sample at low MET with 80 GeV cut
-%\item 3-parton emission can be ingored (we need new plots with high statistics - ask Fuquan or drop this)
+%\item 3-parton emission can be ingored (we need new plots with high statistics)
 %\end{itemize}
 
 
