updated proposal for g-g scan
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@67 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -82,7 +82,7 @@ Figure\,\ref{fig:monojet_width_V} shows the minimal width as a function of media
 \centering
 \includegraphics[width=0.45\linewidth]{figures/monojet/width_V.eps}
 \includegraphics[width=0.45\linewidth]{figures/monojet/width_A.eps}
-\caption{Minimal width as a function of mediator mass for vector and axial-vector mediator assuming couplings of 1. The total width is shown as solid lines for Dark Matter masses of 10\,GeV, 30\,GeV, 100\,GeV and 300\,GeV in black, red, brown and green, respectively. The individual contributions from Dark Matter are indicated by dotted lines with the same colors. The contribution from all quarks is shown as magenta dotted line and the contribution from top quarks only is illustrated by the dotted blue line. The dotted black line shows the extreme case $\Gamma_{\rm{min}}=\mMed$.}
+\caption{Minimal width as a function of mediator mass for vector and axial-vector mediator assuming couplings of 1. The total width is shown as solid lines for Dark Matter masses of 10\,GeV, 30\,GeV, 100\,GeV and 300\,GeV in black, red, brown and green, respectively. The individual contributions from Dark Matter are indicated by dotted lines with the same colors. The contribution from all quarks but top is shown as magenta dotted line and the contribution from top quarks only is illustrated by the dotted blue line. The dotted black line shows the extreme case $\Gamma_{\rm{min}}=\mMed$.}
 %TODO fix the qq line
 \label{fig:monojet_width_V}
 \end{figure}
@@ -180,7 +180,7 @@ Based on the observations above, the following proposal is made for the presenta
 We choose to display the results in the $\mMed$--$\mDM$ plane for the choice of the couplings $g_q=\gDM=1$. In order to motivate the highest mediator mass grid point, the expected sensitivity of Run-2 LHC data needs to be taken into account.
 The expected upper limit at 95\% confidence level on the product of cross section, acceptance and efficiency, $\sigma\times A\times\epsilon$, in the final Run-1 ATLAS mono-jet anaylsis\,\cite{Aad:2015zva} is 51\,fb and 7.2\,fb  for $\MET>300$\,GeV and $\MET>500$\,GeV, respectively. The ATLAS 14\,TeV prospects\,\cite{ATL-PHYS-PUB-2014-007} predict twice better sensitivity with the first $5\,\ifb$ of data already. Given the cross section for $V+$jets processes increases by roughly factor 2 %TODO this is just my guess, can we get more precise number and a citation?
 when going from $\sqrt{s}=8$\,TeV to 13\,TeV, similar fiducial cross section limits can be expected with the first Run-2 data as from the final Run-1 analysis.
-The generator level cross section times the acceptance at $\MET>500$\,GeV for the model with couplings $g_q=\gDM=1$, light Dark Matter of 10\,GeV and 1\,TeV vector mediator is at the order of 100\,fb, i.e. the early Run-2 mono-jet analysis is going to be sensitive to higher mediators. The value of $\sigma\times A$ at $\MET>500$\,GeV for 5\,TeV vector mediator is at the order of 0.1\,fb, therefore this model probably lies beyond the reach of the LHC.
+The generator level cross section times the acceptance at $\MET>500$\,GeV for the model with couplings $g_q=\gDM=1$, light Dark Matter of 10\,GeV and 1\,TeV vector mediator is at the order of 100\,fb, i.e. the early Run-2 mono-jet analysis is going to be sensitive to heavier mediators than this. The value of $\sigma\times A$ at $\MET>500$\,GeV for 5\,TeV vector mediator is at the order of 0.1\,fb, therefore this model probably lies beyond the reach of the LHC.
 Based on these arguments, the following $\mMed$ grid points are chosen, equidistant in the logarithmic scale: 10\,GeV, 30\,GeV, 100\,GeV, 300\,GeV, 1000\,GeV and 3000\,GeV. Given the fact that significant changes in cross section happen around the $\mMed=2\mDM$ threshold, the $\mDM$ grid points are taken at $\mMed/2$, namely: 5\,GeV, 15\,GeV, 50\,GeV, 150\,GeV, 500\,GeV and 1500\,GeV.
 The detailed studies of the impact of the parameter changes on the cross section and kinematic distributions presented earlier in this section support removing some of the grid points and rely on interpolation. The optimised grids proposed for the vector and axial-vector mediators are given in Fig.\,\ref{fig:monojet_grid_V}, containing 24 mass points each.
 %mDM =    5  : mMed =   10    30   100   300  1000  3000  
@@ -237,7 +237,7 @@ Note that we decide to ignore the partial width coming from gluons through loops
 \centering
 \includegraphics[width=0.45\linewidth]{figures/monojet/width_S.eps}
 \includegraphics[width=0.45\linewidth]{figures/monojet/width_P.eps}
-\caption{Minimal width as a function of mediator mass for scalar and pseudo-scalar mediator assuming couplings of 1. The total width is shown as solid lines for Dark Matter masses of 10\,GeV, 30\,GeV, 100\,GeV and 300\,GeV in black, red, brown and green, respectively. The individual contributions from Dark Matter are indicated by dotted lines with the same colors. The contribution from all quarks is shown as magenta dotted line and the contribution from top quarks only is illustrated by the dotted blue line. The dotted black line shows the extreme case $\Gamma_{\rm{min}}=\mMed$.}
+\caption{Minimal width as a function of mediator mass for scalar and pseudo-scalar mediator assuming couplings of 1. The total width is shown as solid lines for Dark Matter masses of 10\,GeV, 30\,GeV, 100\,GeV and 300\,GeV in black, red, brown and green, respectively. The individual contributions from Dark Matter are indicated by dotted lines with the same colors. The contribution from all quarks but top is shown as magenta dotted line and the contribution from top quarks only is illustrated by the dotted blue line. The dotted black line shows the extreme case $\Gamma_{\rm{min}}=\mMed$.}
 %TODO what exactly does the qq line show?
 \label{fig:monojet_width_S}
 \end{figure}
@@ -414,7 +414,7 @@ The limiting case $\Gamma_{\rm{min}}=\mMed$ is shown as a black line.}
 \includegraphics[page=1, trim=310 200 310 200, clip, width=0.3\linewidth]{figures/monojet/rescalingexercise.pdf}
 \includegraphics[page=2, trim=305 195 305 195, clip, width=0.3\linewidth]{figures/monojet/rescalingexercise.pdf}
 \includegraphics[page=3, trim=300 190 300 190, clip, width=0.3\linewidth]{figures/monojet/rescalingexercise.pdf}
-\caption{Scaling along the lines of constnat width. The line of constant width for $\mMed=300$\,GeV and $\mDM=100$\,GeV, intercepting $g_q=\gDM=4$ is shown on left. The generated and rescaled cross sections are compared in the middle, the corresponding ratio is shown on right.}
+\caption{Scaling along the lines of constant width. The line of constant width for $\mMed=300$\,GeV and $\mDM=100$\,GeV, intercepting $g_q=\gDM=4$ is shown on left. The generated and rescaled cross sections are compared in the middle, the corresponding ratio is shown on right.}
 %TODO ask Uli for the color code
 \label{fig:monojet_scaling_constwidth}
 \end{figure}
@@ -425,7 +425,7 @@ The limiting case $\Gamma_{\rm{min}}=\mMed$ is shown as a black line.}
 We propose to present the results in the $g_q$--$\gDM$ plane using the following prescription:
 \begin{itemize}
 \item Since the shapes of kinematic quantities do not change for different couplings, use the acceptance and efficiency for the available $\mDM=50$\,GeV, $\mMed=300$\,GeV, $g_q=\gDM=1$ grid point from the $\mMed$--$\mDM$ plane for the scalar and pseudo-scalar mediator. In case of the vector and axial-vector mediator, use the grid point $\mDM=50$\,GeV, $\mMed=1$\,TeV, $g_q=\gDM=1$.
-\item Generate additional samples in order to get generator cross sections only. For scalar and pseudo-scalar mediator, choose $\mDM=50$\,GeV, $\mMed=300$\,GeV, $g_q=0.1$ with the following values for $\gDM$: 0.1, 2, 3, 4, 5, 6. For vector and axial vector mediator, choose $\mDM=50$\,GeV, $\mMed=1$\,TeV, $\gDM=0.1$ with the following values for $g_q$: 0.1, 0.4, 0.7, 1.3, 1.6, 1.9. The upper values are defined by the minimal width reaching the mediator mass.
+\item Generate additional samples in order to get generator cross sections only. For scalar and pseudo-scalar mediator, choose $\mDM=50$\,GeV, $\mMed=300$\,GeV with the following values for $g_q=\gDM$: 0.1, 2, 3, 4, 5, 6. For vector and axial vector mediator, choose $\mDM=50$\,GeV, $\mMed=1$\,TeV with the following values for $g_q=\gDM$: 0.1, 0.25, 0.5, 0.75, 1.25, 1.5. The upper values are defined by the minimal width reaching the mediator mass.
 \item Rescale the generator cross sections along the lines of constant width in order to populate the whole $g_q$--$\gDM$ plane.
 \end{itemize}
 
@@ -433,6 +433,9 @@ We propose to present the results in the $g_q$--$\gDM$ plane using the following
 %choose mDM=50, mMed=300, gDM=0.1, gSM={0.1, 0.4, 0.7, 1, 1.3, 1.6, 1.9} for V (mMed=GammaMin is reached around 1.6)
 %choose mDM=50, mMed=1000, gDM=0.1, gSM={0.1, 0.4, 0.7, 1, 1.3, 1.6, 1.9} for V (mMed=GammaMin is reached around 1.5)
 
+%choose mDM=50, mMed=300, gSM=gDM={0.1, 1, 2, 3, 4, 5, 6} for S (mMed=GammaMin is reached around 5)
+%choose mDM=50, mMed=300, gDM=gSM={0.1, 0.25, 0.5, 0.75, 1, 1.25, 1.5} for V (mMed=GammaMin is reached around 1.5)
+%choose mDM=50, mMed=1000, gDM=gSM={0.1, 0.25, 0.5, 0.75, 1, 1.25, 1.5} for V (mMed=GammaMin is reached around 1.4)
 
 \paragraph{Rescaling to different mediator width}
 
